burger menu take 2 alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,10 @@
   box-sizing: border-box;
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: baseline;
-  padding: 1em;
-  margin-bottom: 2em;
   background-color: bisque;
   color: #000;
-}
-
-nav {
-  float: right;
-  align-content: flex-end;
-  
 }
 
 /* Position and sizing of burger button */
